@@ -12,8 +12,8 @@ $mkdir='mkdir';
 $cc="ppc-amigaos-gcc-4.0.3";
 $cfile="-c ";
 $cflags="";
-$app_cflag="\$(ADD) -mcrt=clib2 -DAMISSL -D__USE_INLINE__ -D__NO_NET_API -DB_ENDIAN -DTHIRTY_TWO_BITS -DOPENSSL_NO_FP_API -I\$(AmiSSL)/include -I\$(AmiSSL)/openssl -O3 -Wno-pointer-sign";
-$lib_cflag="\$(ADD) -mcrt=clib2 -mbaserel -mcheck68kfuncptr -DAMISSL -DAMISSL_COMPILE -D__USE_INLINE__ -D__NO_NET_API -DB_ENDIAN -DTHIRTY_TWO_BITS -DOPENSSL_NO_FP_API -I\$(AmiSSL)/include -I\$(AmiSSL)/libcmt/include -O3 -Wno-pointer-sign";
+$app_cflag="\$(ADD) -mcrt=clib2 -mcpu=powerpc -mstrict-align -DAMISSL -D__USE_INLINE__ -D__NO_NET_API -DB_ENDIAN -DTHIRTY_TWO_BITS -DOPENSSL_NO_FP_API -I\$(AmiSSL)/include -I\$(AmiSSL)/openssl -O3 -fomit-frame-pointer -Wall";
+$lib_cflag="\$(ADD) -mcrt=clib2 -mcpu=powerpc -mstrict-align -mbaserel -mcheck68kfuncptr -DAMISSL -DAMISSL_COMPILE -D__USE_INLINE__ -D__NO_NET_API -DB_ENDIAN -DTHIRTY_TWO_BITS -DOPENSSL_NO_FP_API -I\$(AmiSSL)/include -I\$(AmiSSL)/libcmt/include -O3 -fomit-frame-pointer -Wall";
 $obj='.o';
 $ofile='-o ';
 $define='-D';
